Updating school section names

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -75,7 +75,7 @@
             {% include "patterns/molecules/jump-nav/jump-nav.html" with modifier="bg bg--dark" sticky=True item=page.tabs %}
 
             {# About #}
-            <section class="schools__about section section--start bg bg--dark anchor-heading" id="about">
+            <section class="schools__about section section--start bg bg--dark anchor-heading" id="overview">
 
                 {% if about_teasers %}
                 <div class="section__row section__row--last schools__about--teasers">
@@ -155,7 +155,7 @@
             {% endif %}
 
             {# Research #}
-            <section class="schools__research section {% if stats_block %}section--start {% else %}section--top-space-small {% endif %} bg bg--dark anchor-heading" id="our-research">
+            <section class="schools__research section {% if stats_block %}section--start {% else %}section--top-space-small {% endif %} bg bg--dark anchor-heading" id="research">
 
                 <div class="section__row section__row--last-small">
                     <div class="section__header section__header--bottom-space grid">
@@ -214,7 +214,7 @@
             </section>
 
             {# Programmes #}
-            <section class="schools__programmes section section--start bg bg--light anchor-heading" id="programmes-short-courses">
+            <section class="schools__programmes section section--start bg bg--light anchor-heading" id="study">
                 <div class="section__row section__row--last-small">
                     <div class="section__header grid">
                         <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
