--- a/rca/project_styleguide/templates/patterns/molecules/jump-nav/jump-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/jump-nav/jump-nav.html
@@ -3,12 +3,8 @@
         {% if title %}
         <div class="jump-nav__heading">
             <div class="jump-nav__heading-label">
-                <span class="jump-nav__pre-stuck-heading">Jump to</span>
-                <span class="jump-nav__stuck-heading">{{ title }}</span>
+                Jump to
             </div>
-            <svg width="12" height="8" class="jump-nav__heading-icon" aria-hidden="true">
-                <use xlink:href="#arrow"></use>
-            </svg>
         </div>
         {% endif %}
         <nav class="jump-nav__container tab-nav__container" data-anchor-nav>
