--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -72,7 +72,7 @@
 
         <div class="page__content schools landing-page">
 
-            {% include "patterns/molecules/jump-nav/jump-nav.html" with modifier="bg bg--dark" sticky=True item=page.tabs %}
+            {% include "patterns/molecules/jump-nav/jump-nav.html" with modifier="bg bg--dark" sticky=True item=tabs %}
 
             {# About #}
             <section class="schools__about section section--start bg bg--dark anchor-heading" id="overview">
