Staff anchor heading

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -259,8 +259,7 @@
 
 
             {# Staff #}
-
-            <section class="schools__staff section section--start section--end bg bg--dark" id="staff">
+            <section class="schools__staff section section--start section--end bg bg--dark anchor-heading" id="staff">
 
                 <div class="section__row {% if page.staff_external_links or page.staff_cta %}section__row--last-small{% else %}section__row--last-large{% endif %}">
                     <div class="section__header section__header--bottom-space grid">
