--- a/rca/project_styleguide/templates/patterns/molecules/card/card_api_content.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card_api_content.html
@@ -1,22 +1,22 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 {# This template is for content pulled from the rca api #}
 <div class="card {% if item.image %}card--image{% endif %} {% if item.person %}card--person{% endif %}">
-    <div class="card__container">
-        {% if item.link %}<a href="{{ item.link }}" class="card__image-container" aria-label="{{ item.title }}">{% endif %}
+    <{% if item.link %}a href="{{ item.link }}"{% else%}div{% endif %} class="card__container">
+        {% if item.link %}<div class="card__image-container">{% endif %}
             {% if item.image and counter != 2 %}
                 <img src="{{ item.image }}" alt="{{item.image_alt}}">
             {% endif %}
-        {% if item.link %}</a>{% endif %}
+        {% if item.link %}</div>{% endif %}
         <div class="card__content-container">
             <div class="card__content">
                 <div class="card__meta">{{ item.type }}</div>
                 <h3 class="card__heading">
-                    {% if item.link %}<a href="{{ item.link }}" class="card__heading-link">{% endif %}
+                    {% if item.link %}<span class="card__heading-link">{% endif %}
                         {{ item.title }}
-                    {% if item.link %}</a>{% endif %}
+                    {% if item.link %}</span>{% endif %}
                 </h3>
                 <div class="card__description">{% firstof item.formatted_date item.description|richtext %}</div>
             </div>
         </div>
-    </div>
+    </{% if item.link %}a{% else %}div{% endif %} class="card__container">
 </div>
