--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -222,6 +222,18 @@
     &__container {
         display: flex;
         flex-direction: column;
+
+        &:hover,
+        &:focus {
+            #{$root}__image-container {
+                opacity: 0.8;
+            }
+
+            #{$root}__heading-link {
+                @include underline-hover-target-reset();
+                color: inherit;
+            }
+        }
     }
 
     &__image-container {
@@ -230,10 +242,6 @@
         min-width: 100%;
         max-width: 100%;
         transition: opacity $transition;
-
-        &:hover {
-            opacity: 0.8;
-        }
     }
 
     &__image {
@@ -277,9 +285,8 @@
     }
 
     &__heading-link {
-        @include underline-hover();
+        @include underline-hover-target();
         position: relative;
-        color: inherit;
     }
 
     &__description {
