--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -264,6 +264,16 @@
         }
     }
 
+    // Components that use font size under 18px (orange doesn't pass on bg--light)
+    .text-teaser &,
+    .contact & {
+        .bg--light & {
+            &#{$root}--primary {
+                color: $color--black;
+            }
+        }
+    }
+
     .accordion & {
         @include font-size(xxs);
         margin-top: ($gutter * 1.5);
