--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
@@ -33,10 +33,10 @@
         <h3 class="body body--two key-details__sub-heading">Next open day</h3>
         <ul class="key-details__list">
             <li class="key-details__list-item">{{ page.next_open_day_date|date:'d M Y' }}</li>
-            {% if open_day_link %}
+            {% if page.link_to_open_days %}
             <li class="key-details__list-item">
-                <a class="key-details__link link link--secondary link--link" href="{{ open_day_link.get_link_url }}">
-                    <span class="link__label">{{ open_day_link.get_link_text }}</span>
+                <a class="key-details__link link link--secondary link--link" href="{{ page.link_to_open_days }}">
+                    <span class="link__label">Book or view all open days</span>
                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                 </a>
             </li>
