Adding jump nav arrow in again

--- a/rca/project_styleguide/templates/patterns/molecules/jump-nav/jump-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/jump-nav/jump-nav.html
@@ -4,6 +4,9 @@
             <div class="jump-nav__heading-label">
                 Jump to
             </div>
+            <svg width="12" height="8" class="jump-nav__heading-icon" aria-hidden="true">
+                <use xlink:href="#arrow"></use>
+            </svg>
         </div>
         <nav class="jump-nav__container tab-nav__container" data-anchor-nav>
             {% for button in item %}
