--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
@@ -8,7 +8,7 @@
 
     {% if page.school_dean %}
     <div class="key-details__section key-details__section--dean">
-        <h3 class="body body--two key-details__sub-heading">School Dean</h3>
+        <h3 class="body body--two key-details__sub-heading">Dean</h3>
         <ul class="key-details__list">
             <li class="key-details__list-item">
                 <a class="link link--tertiary" href="{% pageurl page.school_dean %}">{{ page.school_dean }}</a>
