Logo card height fix

--- a/rca/static_src/sass/components/_logo-card.scss
+++ b/rca/static_src/sass/components/_logo-card.scss
@@ -7,7 +7,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: auto;
+        height: 100%;
         width: 80%;
         background-color: $color--white;
         padding: $gutter;
