Making headings medium weight even if no link

--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -88,6 +88,8 @@
 
         #{$root}__heading {
             @include font-size(xs);
+            font-family: $font--secondary;
+            font-weight: $weight--medium;
         }
 
         #{$root}__description {
