Removing instagram from FE - no BE atm

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -119,7 +119,8 @@
                 {% endif %}
 
                 {% if student_stories %}
-                <div class="section__row {% if instagram_feed == False %}section__row--last {% endif %}schools__about--student-stories partnerships__carousel">
+                {# When Instagram is here we need to add if instagram_feed == False around section__row--last #}
+                <div class="section__row section__row--last schools__about--student-stories partnerships__carousel">
                     <div class="section__header grid">
                         <h2 class="section__heading section__heading--primary heading heading--four">Student stories</h2>
                     </div>
@@ -127,22 +128,24 @@
                 </div>
                 {% endif %}
 
-                {% if instagram_feed %}
-                <div class="section__row {% if about_links or about_cta %}section__row--last-small{% else %}section__row--last-large{% endif %} schools__about--instagram">
-                    <div class="section__header grid">
-                        <h2 class="section__heading section__heading--secondary body body--one">Latest instagram updates</h2>
-                        <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
-                            <a href="{{ photo.href }}" class="link link--tertiary link--link link--external" target="_blank">
-                                <span class="link__label">Follow us at {{ instagram_feed.handle }}</span>
-                                <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
-                            </a>
+                {% comment %}
+                    {% if instagram_feed %}
+                    <div class="section__row {% if about_links or about_cta %}section__row--last-small{% else %}section__row--last-large{% endif %} schools__about--instagram">
+                        <div class="section__header grid">
+                            <h2 class="section__heading section__heading--secondary body body--one">Latest instagram updates</h2>
+                            <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
+                                <a href="{{ photo.href }}" class="link link--tertiary link--link link--external" target="_blank">
+                                    <span class="link__label">Follow us at {{ instagram_feed.handle }}</span>
+                                    <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="section__content">
+                            {% include "patterns/molecules/instagram-feed/instagram-feed.html" with modifier="@small-top-margin" %}
                         </div>
                     </div>
-                    <div class="section__content">
-                        {% include "patterns/molecules/instagram-feed/instagram-feed.html" with modifier="@small-top-margin" %}
-                    </div>
-                </div>
-                {% endif %}
+                    {% endif %}
+                {% end comment %}
 
                 {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=about_links cta=about_cta %}
 
