Fixing OG images

--- a/rca/project_styleguide/templates/patterns/base_page.html
+++ b/rca/project_styleguide/templates/patterns/base_page.html
@@ -33,8 +33,8 @@
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page|social_text:request.site }}">
     {% if page.social_image  %}
-        {% image page.social_image fill-1200x12000 as social_img %}
-        <meta name="twitter:image" content="{{ request.site.root_url }}{{ social_img.url }}">
+        {% image page.social_image fill-1200x1200 as social_img %}
+        <meta name="twitter:image" content="{{ social_img.url }}">
     {% else %}
         <meta name="twitter:image" content="{% static "images/social.png" %}">
     {% endif %}
@@ -45,7 +45,7 @@
     <meta property="og:url" content="{{ page.url }}" />
     <meta property="og:title" content="{{ page.title }}" />
     {% if page.social_image %}
-        <meta property="og:image" content="http://{{ request.site.hostname }}{{ social_img.url }}" />
+        <meta property="og:image" content="{{ social_img.url }}" />
     {% else %}
         <meta name="og:image" content="{% static "images/social.png" %}">
     {% endif %}
