--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -191,17 +191,17 @@
                 </div>
                 {% endif %}
 
-                {% if page.research_collaboration %}
+                {% if page.research_collaborators %}
                 <div class="section__row schools__about--logos {% if page.external_links or page.research_cta_block %}section__row--last{% else %}section__row--last-large{% endif %}">
                     <div class="section__header grid">
                         <h2 class="section__heading section__heading--secondary heading heading--five">{{ page.research_collaborators_heading|default:"Research collaborators" }}</h2>
                     </div>
                     <div class="section__content">
                         <div class="u-small-and-medium-bp-only">
-                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.research_collaboration datatag="data-logo-carousel" per_slide=2 %}
+                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.research_collaborators datatag="data-logo-carousel" per_slide=2 %}
                         </div>
                         <div class="u-large-bp-only">
-                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.research_collaboration datatag="data-logo-carousel" per_slide=3 %}
+                            {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.research_collaborators datatag="data-logo-carousel" per_slide=3 %}
                         </div>
                     </div>
                 </div>
