Cleanup validation and mixin consistency

--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -15,7 +15,7 @@
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
         {% elif page.contact_model_form %}
-            <a href="{% pageurl page.contact_model_form %}" class="contact__link link link--primary link--link body body--two" target="_blank" rel="noopener">
+            <a href="{% pageurl page.contact_model_form %}" class="contact__link link link--primary link--link body body--two">
             <span class="link__label">{{ page.contact_model_form }}</span>
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
