--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -10,6 +10,7 @@
     {% if page.staff_title %}{{ page.staff_title }}{% endif %} {% if page.first_name %}{{ page.first_name }}{% endif %} {% if page.last_name %}{{ page.last_name }}{% endif %}
 {% endblock %}
 
+
 {% block content %}
 
     <div class="page page--no-hero" typeof="schema:Person">
@@ -24,22 +25,22 @@
                     <nav class="title-area__breadcrumb" aria-label="Breadcrumb">
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
                     </nav>
-                    {% if page.staff_title or page.first_name or page.last_name %}
+                    {% if page.student_title or page.first_name or page.last_name %}
                         <h1 property="schema:name" class="title-area__heading heading heading--one">
-                            {% if page.staff_title %}
-                                <span class="title-area__profile-title heading heading--three">{{ page.staff_title }}</span>
+                            {% if page.student_title %}
+                                <span class="title-area__profile-title heading heading--three">{{ page.student_title }}</span>
                             {% endif %}
                             {{ page.first_name }}
                             {{ page.last_name }}
                         </h1>
-                        {% if page.profile_type %}
-                            <h2 class="title-area__sub-heading body body--one">{{ page.profile_type }}</h2>
-                        {% endif %}
+                        {% for student_type in page.student_types.all %}
+                            <h2 class="title-area__sub-heading body body--one">{{ student_type.type }}</h2>
+                        {% endfor %}
                     {% endif %}
 
-                    {% if roles %}
+                    {% if page.programme %}
                         <div class="title-area__job-titles">
-                            {% include "patterns/molecules/job-titles/job-titles.html" with job_titles=roles %}
+                            {{ page.programme }}
                         </div>
                     {% endif %}
 
@@ -135,7 +136,7 @@
                         {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.more_information title="More about "|add:page.first_name %}
                     </div>
                 {% endif %}
-                
+
                 {% if related_students or page.related_links %}
                     <div class="section__notch">
                         <div class="section__notch-fill section__notch-fill--second-col"></div>
