Add missing links and CTA

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -147,7 +147,7 @@
                     {% endif %}
                 {% endcomment %}
 
-                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=about_links cta=about_cta %}
+                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=page.about_external_links cta=page.about_cta_block %}
 
             </section>
 
