--- a/rca/project_styleguide/templates/patterns/base_page.html
+++ b/rca/project_styleguide/templates/patterns/base_page.html
@@ -3,6 +3,7 @@
 {% load static wagtailuserbar wagtailcore_tags wagtailimages_tags navigation_tags util_tags %}
 
 {% block meta_tags %}
+
     <meta http-equiv="cache-control" content="stale-if-error=300" />
     {% if GOOGLE_TAG_MANAGER_ID %}
         {# To enable GTM code you need to specify GOOGLE_TAG_MANAGER_ID in Heroku settings #}
@@ -32,11 +33,12 @@
     <meta name="twitter:site" content="@{{ settings.utils.SocialMediaSettings.twitter_handle }}" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page|social_text:request.site }}">
+    {% wagtail_site as current_site %}
     {% if page.social_image  %}
         {% image page.social_image fill-1200x1200 as social_img %}
         <meta name="twitter:image" content="{{ social_img.full_url }}">
     {% else %}
-        <meta name="twitter:image" content="{{ request.site.root_url }}{% static "images/social.png" %}">
+        <meta name="twitter:image" content="{{ current_site.root_url }}{% static "images/social.png" %}">
     {% endif %}
 
     {# facebook opengraph tags #}
@@ -47,7 +49,7 @@
     {% if page.social_image %}
         <meta property="og:image" content="{{ social_img.full_url }}" />
     {% else %}
-        <meta name="og:image" content="{{ request.site.root_url }}{% static "images/social.png" %}">
+        <meta name="og:image" content="{{ current_site.root_url }}{% static "images/social.png" %}">
     {% endif %}
     <meta property="og:description" content="{{ page|social_text:request.site }}" />
     <meta property="og:site_name" content="{{ settings.utils.SocialMediaSettings.site_name }}" />
