Making job titles consistent with staff

--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -42,7 +42,10 @@
                         <div class="title-area__job-titles">
                             <div class="job-titles">
                                 <ul class="job-titles__item">
-                                    <li class="job-titles__title">{{ page.programme }}</li>
+                                    <li class="job-titles__title">Completed PhD student - 2019</li>
+                                    <li class="job-titles__department">
+                                        <a class="body body--two link link--tertiary" href="#">{{ page.programme }}</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
