Use a generic thank you template

--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page_landing.html
@@ -1,13 +1,21 @@
 {% extends "patterns/base_page.html" %}
-{% load wagtailcore_tags wagtailimages_tags static %}
+{% load wagtailcore_tags wagtailimages_tags util_tags static %}
 
 {% block content %}
 
-    <div class="intro">
-        <div class="container">
-            <h1>Thank you</h1>
-            <div>{{ page.thank_you_text|richtext }}</div>
+    <div class="page page--no-hero">
+
+        <div class="page__header bg bg--dark">
+            <div class="title-area title-area--guide grid">
+                <div class="title-area__content">
+                    <h1 class="title-area__heading heading heading--display-two">
+                        Thank you
+                    </h1>
+                    {{ page.thank_you_text|richtext }}
+                </div>
+            </div>
         </div>
+
     </div>
 
 {% endblock %}
