--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -24,4 +24,14 @@
             }
         }
     }
+
+    .app--thanks & {
+        #{$root}__text {
+            margin-bottom: 0;
+
+            @include media-query(large) {
+                margin-left: 33.33%;
+            }
+        }
+    }
 }
