--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -243,6 +243,17 @@
         }
     }
 
+    .app--thanks & {
+        #{$root}__content {
+            @include media-query(medium) {
+                grid-column: 1 / span 2;
+            }
+            @include media-query(large) {
+                grid-column: 2 / span 3;
+            }
+        }
+    }
+
     .bg--dark & {
         #{$root}__sub-heading {
             color: $color--meta-darkbg;
