Fix to ensure layout doesn’t break if only one news item

--- a/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
+++ b/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
@@ -5,7 +5,7 @@
             <div class="news__feature">
         {% endif %}
 
-        {% if forloop.counter == 2 %}
+        {% if forloop.counter == 2 or forloop.last %}
             <div class="news__sub-features">
         {% endif %}
 
