--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -54,7 +54,7 @@
                     {% if page.email %}
                         <div class="title-area__contact">
                             <a class="link link--secondary link--link body body--two" href="mailto:{{ page.email }}">
-                                <span class="link__label">Email {{ page.first_name }} {{ page.last_name }}</span>
+                                <span class="link__label">Email {{ page.email }}</span>
                                 <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                             </a>
                         </div>
